[gd_scene load_steps=5 format=3 uid="uid://b2r8065w24jdq"]

[ext_resource type="Script" uid="uid://bstw1drx1a7dg" path="res://ui/misc/sub_type_list_item.gd" id="1_00a7g"]
[ext_resource type="Material" uid="uid://c0ipdgk1m22gh" path="res://ui/misc/ui_static_mat.tres" id="1_0mcq0"]
[ext_resource type="Texture2D" uid="uid://dnwjqswetecya" path="res://ui/icons/black_32x32.png" id="2_cmqfn"]
[ext_resource type="Texture2D" uid="uid://c7mqojhjkgdj1" path="res://ui/icons/White/crosshair_11.png" id="3_oyrfw"]

[node name="MarginContainer" type="MarginContainer"]
custom_minimum_size = Vector2(50, 37)
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_00a7g")

[node name="SelectionProgressBar" type="TextureProgressBar" parent="."]
visible = false
material = ExtResource("1_0mcq0")
layout_mode = 2
max_value = 1.0
step = 0.01
nine_patch_stretch = true
texture_progress = ExtResource("2_cmqfn")
tint_progress = Color(0, 0, 0, 1)

[node name="SelectionTexture" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("3_oyrfw")
draw_center = false
region_rect = Rect2(5, 5, 22, 22)
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "FMJ - 50"
flat = true

[node name="SelectionTimer" type="Timer" parent="."]

[connection signal="timeout" from="SelectionTimer" to="." method="_on_selection_timer_timeout"]
